--- a/style.css
+++ b/style.css
@@ -1,4 +1,92 @@
 /* common shared styles */
 body{
+    margin: 0;
+    padding: 0;
     font-family: 'Roboto', sans-serif;
+}
+.btn{
+    border: 0;
+    border-radius: 8px;
+    background: #E55473;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 15px 35px;
+}
+.sec-title{
+    color: #272727;
+    font-size: 35px;
+    font-weight: 800;
+}
+.sec-description{
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 15px;
+    font-weight: 400;
+}
+
+/* header style */
+.header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: rgba(229, 84, 115, 0.10);
+}
+.header-title{
+    color: #272727;
+    font-size: 60px;
+    font-weight: 800;
+}
+.header-description{
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 15px;
+    font-weight: 400;
+    margin-bottom: 30px;
+}
+.h-left{
+    max-width: 500px;
+    margin: 0 0 0 170px;
+}
+.h-right{
+    width: 470px;
+    height: 650px;
+    margin: 50px 170px 0 0;
+}
+
+/* main section */
+.feature-sec{
+    text-align: center;
+    margin-top: 150px;
+}
+.feature-info{
+    width: 500px;
+    margin: auto;
+}
+.feature-item{
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+.item h4{
+    text-decoration: underline;
+    color: #272727;
+    font-size: 20px;
+    font-weight: 500;
+}
+.flower img{
+    width: 220px;
+    height: 320px;
+    padding: 80px 80px 0 80px;
+    background: rgba(167, 33, 98, 0.15);
+    border-radius: 50% 50% 0 0;
+}
+#small{
+    height: 280px;
+    padding-bottom: 40px;
+    background: rgba(5, 151, 160, 0.15);
+}
+#color{
+    background: rgba(71, 125, 17, 0.15);
+}
+.margin{
+    margin: 0 20px;
 }
